--- a/index.html
+++ b/index.html
@@ -28,7 +28,29 @@
   </p>
 
   <h2>Projects</h2>
-  <p>Coming soon.</p>
+  <h2>Projects</h2>
+
+<h3>SpiderClaw Hydraulic Robotic Gripper</h3>
+
+<video width="500" controls muted>
+  <source src="IMG_1075.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
+
+<p>
+  Designed and built a hydraulically actuated robotic gripper using syringes
+  and tubing to explore mechanical advantage and fluid power principles.
+</p>
+
+<ul>
+  <li>Mechanical design and prototyping</li>
+  <li>Manual hydraulic actuation and testing</li>
+  <li>Iterative physical builds</li>
+</ul>
+
+<p>
+  <strong>Tools:</strong> SolidWorks, prototyping, basic fluid mechanics
+</p>
 
   <h2>Contact</h2>
   <p>
