--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
   </p>
 
   <h2>Projects</h2>
-  <h2>Projects</h2>
 
-<h3>SpiderClaw Hydraulic Robotic Gripper</h3>
+<h3>Shake Table for Double Potential Well</h3>
 
 <video width="500" controls muted>
   <source src="IMG_1075.mp4" type="video/mp4">
@@ -38,8 +37,7 @@
 </video>
 
 <p>
-  Designed and built a hydraulically actuated robotic gripper using syringes
-  and tubing to explore mechanical advantage and fluid power principles.
+Designed and built a laboratory shake table and scotch yoke drive system to convert rotary motion into controlled linear oscillation for a potential well experiment.
 </p>
 
 <ul>
