--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@ Designed and built a laboratory shake table and scotch yoke drive system to conv
 </p>
 
 <ul>
-  <li>Mechanical design and prototyping</li>
+  <li>Mechanical design and prototypin</li>
   <li>Manual hydraulic actuation and testing</li>
   <li>Iterative physical builds</li>
 </ul>
 
 <p>
-  <strong>Tools:</strong> SolidWorks, prototyping, basic fluid mechanics
+  <strong>Tools:</strong> Mechanical design, manual machining, mechanical alignment and assembly
 </p>
 
   <h2>Contact</h2>
