--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@ Designed and built a laboratory shake table and scotch yoke drive system to conv
 </p>
 
 <ul>
-  <li>Mechanical design and prototypin</li>
-  <li>Manual hydraulic actuation and testing</li>
-  <li>Iterative physical builds</li>
+  <li>Designed and fabricated the shake table structure and drive components.</li>
+  <li>Integrated and aligned the drive system to achieve smooth, repeatable oscillation.</li>
 </ul>
 
 <p>
