--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 </video>
 
 <p>
-Designed and built a laboratory shake table and scotch yoke drive system to convert rotary motion into controlled linear oscillation for a potential well experiment.
+Designed and built a laboratory shake table and Scotch yoke drive system to convert rotary motion into controlled linear oscillation for a potential well experiment.
 </p>
 
 <ul>
-  <li>Designed and fabricated the shake table structure and drive components.</li>
+  <li>Designed and fabricated the shake table structure and drive system.</li>
   <li>Integrated and aligned the drive system to achieve smooth, repeatable oscillation.</li>
 </ul>
 
