--- a/index.html
+++ b/index.html
@@ -53,5 +53,26 @@ Designed and built a laboratory shake table and Scotch yoke drive system to conv
   <p>
     GitHub: <a href="https://github.com/matthewkoob">github.com/matthewkoob</a>
   </p>
+
+  <!-- PROJECT 2: CNC-Machined Pneumatic Air Motor -->
+<h3>CNC-Machined Pneumatic Motor</h3>
+
+<!-- Optional image (recommended). Upload the file to your repo and rename the src to match exactly. -->
+<!-- <img src="air_motor.jpg" width="500" alt="CNC-machined pneumatic air motor"> -->
+
+<p>
+  Generated CAM toolpaths and machined components for a pneumatic air motor using CNC milling,
+  followed by assembly and functional testing.
+</p>
+
+<ul>
+  <li>Generated CAM toolpaths for motor components using Fusion 360.</li>
+  <li>Set up and operated CNC mills.</li>
+  <li>Machined, assembled, and tested the air motor for functional operation.</li>
+</ul>
+
+<p>
+  <strong>Tools:</strong> CAM (Fusion 360), CNC milling, manual machining, mechanical assembly
+</p>
 </body>
 </html>
