--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@ Designed and built a laboratory shake table and Scotch yoke drive system to conv
   <!-- PROJECT 2: CNC-Machined Pneumatic Air Motor -->
 <h3>CNC-Machined Pneumatic Motor</h3>
 
-<!-- Optional image (recommended). Upload the file to your repo and rename the src to match exactly. -->
-<!-- <img src="air_motor.jpg" width="500" alt="CNC-machined pneumatic air motor"> -->
+<img src="CNC_motor.jpg" width="500" alt="CNC-machined pneumatic air motor">
 
 <p>
   Generated CAM toolpaths and machined components for a pneumatic air motor using CNC milling,
