--- a/index.html
+++ b/index.html
@@ -74,5 +74,25 @@ Designed and built a laboratory shake table and Scotch yoke drive system to conv
   <p>
     GitHub: <a href="https://github.com/matthewkoob">github.com/matthewkoob</a>
   </p>
+<br><br>
+
+  <h2>3D-Printed Double Pendulum Demonstrator</h2>
+
+<video controls style="max-width: 800px; width: 100%; border-radius: 8px; margin: 12px 0;">
+  <source src="IMG_1133.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
+
+<p>
+  Designed and fabricated a 3D-printed double pendulum system to demonstrate nonlinear dynamics and sensitivity to initial conditions.
+</p>
+
+<ul>
+  <li>Designed structural components for stability and repeatable motion.</li>
+  <li>Applied design-for-manufacturing principles for FDM 3D printing.</li>
+  <li>Iterated on geometry and tolerances to achieve smooth pendulum motion.</li>
+</ul>
+
+<p><strong>Tools:</strong> Mechanical design, 3D printing (FDM), prototyping, mechanical assembly</p>
 </body>
 </html>
