--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ Designed and built a laboratory shake table and Scotch yoke drive system to conv
   </p>
 <br><br>
 
-  <h2>3D-Printed Double Pendulum Demonstrator</h2>
+  <h2>3D-Printed Double Pendulum</h2>
 
 <video controls style="max-width: 800px; width: 100%; border-radius: 8px; margin: 12px 0;">
   <source src="IMG_1133.mp4" type="video/mp4">
