--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@ Designed and built a laboratory shake table and Scotch yoke drive system to conv
   <source src="IMG_1133.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
+  
+<img src="Portfolio_CAD.png" alt="CAD model of double pendulum assembly" style="max-width:100%; height:auto;">
+
 
 <p>
   Designed and fabricated a 3D-printed double pendulum system to demonstrate nonlinear dynamics and sensitivity to initial conditions.
