--- a/index.html
+++ b/index.html
@@ -95,7 +95,11 @@ Designed and built a laboratory shake table and Scotch yoke drive system to conv
   <li>Applied design-for-manufacturing principles for FDM 3D printing.</li>
   <li>Iterated on geometry and tolerances to achieve smooth pendulum motion.</li>
 </ul>
-
+<br><br>
+ <h2>Contact</h2>
+  <p>
+    GitHub: <a href="https://github.com/matthewkoob">github.com/matthewkoob</a>
+  </p>
 <p><strong>Tools:</strong> Mechanical design, 3D printing (FDM), prototyping, mechanical assembly</p>
 </body>
 </html>
