--- a/index.html
+++ b/index.html
@@ -95,6 +95,23 @@ Designed and built a laboratory shake table and Scotch yoke drive system to conv
 <p><strong>Tools:</strong> Mechanical design, 3D printing (FDM), prototyping, mechanical assembly</p>
 
 <br><br>
+<h3>Spider Claw</h3>
+
+<p>
+Designed and built a hydraulically actuated robotic gripper to explore mechanical advantage,
+fluid power, and linkage-driven motion using a fully physical prototype.
+</p>
+
+<ul>
+  <li>Designed the gripper geometry and linkage layout for controlled finger motion.</li>
+  <li>Implemented manual hydraulic actuation using syringes and tubing.</li>
+  <li>Fabricated and assembled multiple prototype iterations to improve motion and reliability.</li>
+</ul>
+
+<p>
+<strong>Tools:</strong> Mechanical design, prototyping, manual fabrication, basic fluid mechanics
+</p>
+<br><br>
  <h2>Contact</h2>
   <p>
     GitHub: <a href="https://github.com/matthewkoob">github.com/matthewkoob</a>
