--- a/index.html
+++ b/index.html
@@ -98,14 +98,12 @@ Designed and built a laboratory shake table and Scotch yoke drive system to conv
 <h3>Spider Claw</h3>
 
 <p>
-Designed and built a hydraulically actuated robotic gripper to explore mechanical advantage,
-fluid power, and linkage-driven motion using a fully physical prototype.
+Worked with a small team to designed and build a hydraulic robot arm for teaching mechanical advantage, fluid power, and linkage-driven motion to grade-school students.
 </p>
 
 <ul>
-  <li>Designed the gripper geometry and linkage layout for controlled finger motion.</li>
-  <li>Implemented manual hydraulic actuation using syringes and tubing.</li>
-  <li>Fabricated and assembled multiple prototype iterations to improve motion and reliability.</li>
+  <li>Fabricated and assembled multiple prototypes to test strength and reliability.</li>
+  <li>Designed and made final product within a limited budget, prioritizing simplicity and cost-effective materials.</li>
 </ul>
 
 <p>
