--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ Designed and built a laboratory shake table and Scotch yoke drive system to conv
 <h3>Spider Claw</h3>
 
 <p>
-Worked with a small team to designed and build a hydraulic robot arm for teaching mechanical advantage, fluid power, and linkage-driven motion to grade-school students.
+Worked with a small team to design and build a hydraulic robot arm for teaching mechanical advantage, fluid power, and linkage-driven motion to grade-school students.
 </p>
 
 <ul>
