--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@ Designed and built a laboratory shake table and Scotch yoke drive system to conv
 <p>
 Worked with a small team to design and build a hydraulic robot arm for teaching mechanical advantage, fluid power, and linkage-driven motion to grade-school students.
 </p>
-
+<img src="Spider_portfolio.jpg" alt="SpiderClaw hydraulic robotic arm" style="max-width: 800px; width: 100%; height: auto; display: block; margin: 16px 0;">
+  
 <ul>
   <li>Fabricated and assembled multiple prototypes to test strength and reliability.</li>
   <li>Designed and made final product within a limited budget, prioritizing simplicity and cost-effective materials.</li>
