--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 
   <h2>About</h2>
   <p>
-    Mechanical engineering student with interests in design, robotics,
-    and applied mechanics.
+  Committed mechanical engineering student with hands-on experience in robotics, manufacturing, CAD, and programming.
   </p>
 
   <h2>Projects</h2>
