--- a/index.html
+++ b/index.html
@@ -6,12 +6,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body {
-      font-family: system-ui, -apple-system, sans-serif;
-      max-width: 800px;
-      margin: 80px auto;
-      padding: 0 20px;
-      line-height: 1.6;
-    }
+    font-family: system-ui, -apple-system, sans-serif;
+    max-width: 800px;
+    margin: 80px auto;
+    padding: 0 20px;
+    line-height: 1.6;
+    background-color: #121212;
+    color: #e6e6e6;
+  }
+
+h1, h2, h3 {
+  color: #ffffff;
+}
+
+a {
+  color: #7db4ff;
+}
+
+.muted {
+  color: #aaaaaa;
+}
     h1 { font-size: 2.5rem; }
     h2 { margin-top: 2rem; }
     .muted { color: #666; }
