--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ a {
   
 
   <p>
-  Committed mechanical engineering student with hands-on experience in robotics, manufacturing, CAD, and programming.
+  Mechanical engineering student with hands-on experience in robotics, manufacturing, CAD, and programming.
   </p>
 
   <h2>Projects</h2>
