--- a/index.html
+++ b/index.html
@@ -124,6 +124,15 @@ Worked with a small team to design and build a hydraulic robot arm for teaching 
 <strong>Tools:</strong> Mechanical design, prototyping, manual fabrication, basic fluid mechanics
 </p>
 <br><br>
+  <h2>Acknowledgements</h2>
+<p>
+I’m grateful to my teachers and mentors who supported these projects—especially those who
+provided technical guidance, shop access, and feedback throughout the build process. 
+</p>
+<p>
+Their mentorship and kindness have been essential in my growth as an engineer.
+</p>
+<br><br>
  <h2>Contact</h2>
   <p>
     GitHub: <a href="https://github.com/matthewkoob">github.com/matthewkoob</a>
