--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@ Their mentorship and kindness have been essential in my growth as an engineer.
 <br><br>
  <h2>Contact</h2>
   <p>
-    GitHub: <a href="https://github.com/matthewkoob">github.com/matthewkoob</a>
+  Email: <a href="mailto:koob3090@stthomas.edu">koob3090@stthomas.edu</a><br>
+  LinkedIn: <a href="https://www.linkedin.com/in/mjkoob">linkedin.com/in/mjkoob</a><br>
   </p>
 </body>
 </html>
